# atreus-qmk

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: compile.yml  lint.yml
keyboard/atreus/keymaps/via/: keymap.c
tools/: qmk_task.py
